--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,9 @@ channels:
   - conda-forge
 
 dependencies:
-  - python =3.10
+  - python =3.11
   - jupyterlab
-  #- jupyter_contrib_nbextensions
+  - jupyter_contrib_nbextensions
   - nb_conda_kernels
   - notebook
+  - rise
